--- a/css/table.css
+++ b/css/table.css
@@ -17,6 +17,7 @@
     width: 100%;
     border-collapse: collapse;
   }
+
   
   .players-table th, .players-table td {
     border: 1px solid #ccc;
@@ -111,6 +112,12 @@
     margin: 1rem auto; 
 }
 
+.filter-age-range {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .filter-search-input {
     width: 100%;
     padding: 0.5rem;
@@ -139,4 +146,19 @@
 .tab-button.active {
     background-color: #d0d0d0; 
     font-weight: bold;
+}
+
+
+/* Slider */
+
+
+.slider-container {
+    margin-top: 20px;
+    width: 70%;
+}
+
+
+#age {
+    font-weight: bold;
+    margin-bottom: 10px;
 }
