--- a/css/player-details.css
+++ b/css/player-details.css
@@ -1,22 +1,30 @@
-/* General styles */
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
+.player-info-container {
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: #f4f4f9;
+    align-items: flex-start;
+    margin-bottom: 20px;
 }
 
-.container {
-    width: 80%;
-    max-width: 800px;
-    background-color: #ffffff;
-    padding: 20px;
-    margin-top: 50px;
+.player-image-container {
+    flex: 0 0 auto; /* Prevent image from shrinking */
+    margin: 20px
+}
+
+.player-image-container img {
+    width: 275px; /* Define the width of the player image */
+    height: auto;
+    border-radius: 8px; /* Optional: add rounded corners */
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-    border-radius: 8px;
+}
+
+.player-details-container {
+    font-size: 20px;
+    margin: 5px 0;
+}
+
+hr {
+    margin: 15px 0;
+    border: 0;
+    border-top: 0.5px solid #000000;
 }
 
 h1 {
@@ -27,7 +35,7 @@ h1 {
 }
 
 /* Back button styling */
-.back-button {
+.player-back-button {
     display: inline-block;
     margin-bottom: 20px;
     color: #ffffff;
@@ -40,7 +48,7 @@ h1 {
     text-align: center;
 }
 
-.back-button:hover {
+.player-back-button:hover {
     background-color: #0056b3;
 }
 
@@ -62,7 +70,7 @@ h1 {
 }
 
 /* player-details.css */
-.container {
+.player-container {
     margin: 20px;
 }
 
@@ -76,35 +84,42 @@ h2 {
     color: #333;
 }
 
-.general, .playerInfo, .gameInfo, .offensive, .defensive {
+.player-general, .player-info-section, .player-game-info, .player-offensive, .player-defensive {
     margin-bottom: 20px;
 }
 
-div > div {
+.player-content > div {
     margin: 5px 0;
 }
 
-.tabs {
-    display: flex; 
-    margin-bottom: 10px; 
+/* Player tabs */
+.player-tabs {
+    display: flex;
+    margin-bottom: 10px;
 }
 
-.tab-button {
-    flex: 1; 
-    padding: 10px; 
-    border: 1px solid #ccc; 
+.player-tab-button {
+    flex: 1;
+    padding: 10px;
+    border: 1px solid #ccc;
     background-color: #f9f9f9;
-    cursor: pointer; 
-    transition: background-color 0.3s; 
+    cursor: pointer;
+    transition: background-color 0.3s;
 }
 
-.tab-button:hover {
-    background-color: #e0e0e0; 
+.player-tab-button:hover {
+    background-color: #e0e0e0;
 }
 
-.tab-button.active {
-    background-color: #d0d0d0; 
+.player-tab-button.active {
+    background-color: #d0d0d0;
     font-weight: bold;
+}
+
+/* Player details section styling */
+.player-details-section {
+    display: none;
+    margin-top: 20px;
 }
 
 /* Optional styling for larger screens */
@@ -114,3 +129,4 @@ div > div {
         justify-content: space-between;
     }
 }
+
