--- a/css/player-details.css
+++ b/css/player-details.css
@@ -1,30 +1,58 @@
 .player-info-container {
+    justify-content: center;
     display: flex;
-    align-items: flex-start;
-    margin-bottom: 20px;
+    flex-direction: column;
+    text-align: left;
+    font-size: 18px;
+    line-height: 1.6;
+    margin: 10px 20px;
+    flex: 1 1 200px; /* Assegura que as divs cresçam ou encolham conforme necessário, com largura mínima de 200px */
 }
 
 .player-image-container {
-    flex: 0 0 auto; /* Prevent image from shrinking */
-    margin: 20px
+    flex: 0 0 200px; /* Define a largura da div */
+    margin-top: 10px;
+    margin-left: 20px;
+
 }
 
 .player-image-container img {
-    width: 275px; /* Define the width of the player image */
+    width: 200px; /* Define the width of the player image */
     height: auto;
-    border-radius: 8px; /* Optional: add rounded corners */
+    border: 1px solid #ccc;
+    border-radius: 10px; /* Optional: add rounded corners */
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s, box-shadow 0.3s;
+}
+
+.player-image-container img:hover {
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    transform: scale(1.05);
+    cursor: pointer;
 }
 
 .player-details-container {
-    font-size: 20px;
-    margin: 5px 0;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center; /* Alinha os conteúdos das divs no centro */
+    text-align: left !important; /* Centraliza o texto */
+    font-size: 18px;
+    line-height: 1.6;
+    margin: 10px 30px;
+    flex: 1 1 200px; /* Assegura que as divs cresçam ou encolham conforme necessário, com largura mínima de 200px */
 }
 
+
+.player-details-container p {
+    color: #333;;
+}
+
+
+
 hr {
-    margin: 15px 0;
     border: 0;
-    border-top: 0.5px solid #000000;
+    border-top: 0.5px solid #ccc;
 }
 
 h1 {
