modal but with percentil

--- a/css/player-details-charts.css
+++ b/css/player-details-charts.css
@@ -128,3 +128,11 @@ td.percentile-good {
 #indicative-scale {
     margin-top: 10px;
 }
+
+#modal {
+z-index: 1000;
+}
+
+#modal-overlay {
+z-index: 999;
+}
