--- a/css/styles.css
+++ b/css/styles.css
@@ -91,4 +91,11 @@
     color: #fff;
   }
 
+  .section-title {
+    font-size: 1.5rem;
+    font-weight: bold;
+    margin-bottom: 1rem;
+    margin-top: 1rem;
+    text-align: center;
+  }
   
