--- a/css/compare.css
+++ b/css/compare.css
@@ -179,3 +179,7 @@ td.percentile-good {
     transform: scale(1.05);
     cursor: pointer;
 }
+
+.compare-graphics {
+    margin-bottom: 200px; /* Add margin to ensure it doesn't overlap the footer */
+}
