--- a/css/styles.css
+++ b/css/styles.css
@@ -98,4 +98,12 @@
     margin-top: 1rem;
     text-align: center;
   }
+
+  .section-title2 {
+    font-size: 1.5rem;
+    font-weight: bold;
+    margin-bottom: 0.3rem;
+    margin-top: 0.3rem;
+    text-align: center;
+  }
   
