--- a/css/table.css
+++ b/css/table.css
@@ -1,12 +1,12 @@
 .content {
-    width: 70%; 
+    width: 70dvw;
     padding: 1rem;
     display: inline-block;
     vertical-align: top; 
 }
 
 .filters {
-    width: 30%; 
+    width: 30dvw;
     padding: 1rem;
     display: inline-block; 
     border-left: 1px solid #8a8a8a;
@@ -78,7 +78,7 @@
     top: 0;
     width: 100%;
     height: 100%;
-    overflow: auto; 
+    overflow:hidden;
     background-color: rgba(0, 0, 0, 0.5); 
 }
   
@@ -87,7 +87,6 @@
     margin: 15% auto; 
     padding: 20px;
     border: 1px solid #888;
-    width: 80%; 
     max-width: 600px; 
   }
   
