--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,12 @@
     padding: 0;
     box-sizing: border-box;
   }
+  *,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+
   
   body {
     font-family: Arial, sans-serif;
@@ -14,6 +20,7 @@
   main {
     flex: 1;
   }
+  
 
   .section {
     display: none; 
@@ -76,14 +83,15 @@
     background-color: #333;
     color: #fff;
     text-align: center;
-    padding: 1rem;
-    font-size: 0.875rem;
+    padding: 0.5rem;
+    font-size: 0.85rem;
     position: fixed;
-    height: 60px;
+    height: 50px;
     bottom: 0px;
     left: 0px;
     right: 0px;
     margin-bottom: 0px;
+    z-index: 99999999999!important;
   }
 
   .footer a {
